--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@
     <meta name="generator" content={Astro.generator} />
     <title>BlogSignal</title>
   </head>
-  <body class="bg-[url(./bg.jpg)] bg-cover bg-no-repeat text-white py-2 px-16">
+  <body class="bg-[url(/bg.jpg)] bg-cover bg-no-repeat text-white py-2 px-16">
     <nav class="min-h-[3rem] w-full flex justify-between items-center navbar">
       <div>
         <a href="#" class="text-xl">BlogSignal</a>
